# fleetspeak-rs-stat-service

./: Cargo.toml  README.md  build.rs  stat.py
src/: lib.rs  main.rs
src/proto/: stat.proto
