[package]
name = "fleetspeak-rs-stat-service"
version = "0.1.0"
authors = ["Fedya001 <rabbitera@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fleetspeak = "0.1.1"
prost = "0.6.1"
prost-types = "0.6.1"
libc = "0.2.68"

[build-dependencies]
prost-build = { version = "0.6.1" }
