[package]
name = "fleetspeak-rs-stat-service"
version = "0.1.0"
authors = ["Fedya001 <rabbitera@gmail.com>"]
edition = "2018"

[dependencies]
fleetspeak = "0.1.1"
prost = "0.6.1"
prost-types = "0.6.1"
libc = "0.2.68"
users = "0.9.1"
tempfile = "3.1.0"

[build-dependencies]
prost-build = { version = "0.6.1" }
